# java1

./: .env  .gitignore  Dockerfile  docker-compose.yml
.devcontainer/: devcontainer.json
first-socket/: FirstClient.java  FirstServer.java
jni1/: .gitignore  CMakeLists.txt  SubtractionFun.cpp  SubtractionFun.h  SubtractionFun.java  compile.sh
second-socket/: SecondClient.java  SecondServer.java
space-travel/: BUILD.bazel
space-travel/solution/: SpaceTravel.cpp  SpaceTravel.h  SpaceTravel.java
space-travel/starter/: CMakeLists.txt  SpaceTravel.cpp  SpaceTravel.java  compile.sh  run.sh
webapps/: compile.sh
webapps/catalog/: catalog.html  compile.sh  login.html  register.html  styles.css
webapps/catalog/WEB-INF/: context.xml  web.xml
webapps/catalog/WEB-INF/src/: AccessServlet.java  CartItem.java  CartManager.java  CartServlet.java  CartSummaryHtmlGenerator.java  DatabaseManager.java  User.java  UserManager.java
webapps/icecream-app/: compile.sh  example.html  form.html
webapps/icecream-app/WEB-INF/: web.xml
webapps/icecream-app/WEB-INF/src/: HomeServlet.java
